update chat and pick room